# ops-py

./: .gitignore  README.md  TEST_CATALOG.md  pyproject.toml  pyproject.toml.wstemplate  version.txt
src/ops/: __init__.py  batch.py  batch_metadata.py  contexts.py  error.py  loop_op.py  op.py  op_metadata.py  ops.py  structured_queries.py
src/ops/trigger/: __init__.py  engine.py  registry.py  trigger.py
src/ops/wrappers/: logging_wrapper.py  timeout_wrapper.py  validating_wrapper.py
tests/: test_batch.py  test_contexts.py  test_control_flow.py  test_error.py  test_integration.py  test_logging_wrapper.py  test_loop_op.py  test_macros.py  test_op.py  test_op_metadata.py  test_ops.py  test_structured_queries.py  test_timeout_wrapper.py  test_validating_wrapper.py
